fix invisible code

--- a/src/components/Pages/NotebookPage/style.scss
+++ b/src/components/Pages/NotebookPage/style.scss
@@ -42,6 +42,10 @@
     background-color: var(--background);
     color: var(--on-background);
 
+    pre {
+      color: #333333;
+    }
+
     img {
       width: 100%;
       border-radius: 8px;
